# crawlsy-spider

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
crawlsy_spider/: __init__.py  core.py  scheduler.py  utils.py
tests/: test_functions.py  test_queue.py
