[tool.poetry]
name = "crawlsy-spider"
version = "0.1.3"
description = ""
authors = ["YUNHAI <bybxbwg@foxmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
crawlsy-spider = "crawlsy_spider.cli:cli"
